infra/keycloak/virtual-service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak-virtual-service
  namespace: keycloak
spec:
  hosts:
    - keycloak.local
  gateways:
    - istio-system/main # expose the ui external to the cluster
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: keycloak-keycloak
            port:
              number: 80
      timeout: 15s
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
